[metadata]
name = makeflatt
version = attr: makeflatt.__version__
description = Python module for interacting with nested dicts as a single level dict with delimited keys.
long_description = file: README.rst, LICENSE.rst
url = https://github.com/jaswdr/makeflatt
author = Jonathan Schweder
author_email = jonathanschweder@gmail.com
license = MIT
classifiers =
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = True
py_modules = makeflatt
zip_safe = True

[options.package_data]
* = CHANGELOG.md, README.rst, LICENSE

[flake8]
application-import-names = makeflatt
exclude = ci, docs, env
ignore = RST304
import-order-style = google

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml
