[metadata]
name = makeflatt
version = attr: makeflatt.__version__
description = Python module for interacting with nested dicts as a single level dict with delimited keys.
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/jaswdr/makeflatt
author = Jonathan Schweder
author_email = jonathanschweder@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = makeflatt, dict, dictionaries, flatten
project_urls =
    Changelog=https://github.com/jaswdr/makeflatt/blob/master/CHANGELOG.md
    Source=https://github.com/jaswdr/makeflatt
    Tracker=https://github.com/jaswdr/makeflatt/issues

[options]
include_package_data = True
py_modules = makeflatt
zip_safe = True

[options.package_data]
* = CHANGELOG.md, README.md, LICENSE

[flake8]
application-import-names = makeflatt
exclude = ci, docs, env
ignore = RST304
import-order-style = google

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml
